objects/Work_Request__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Users_Benefited__c</fullName>
        <description>Approximately how many users will be benefited?</description>
        <inlineHelpText>Approximately how many users will be benefited?</inlineHelpText>
        <label>Number of Users Impacted</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <inlineHelpText>1. Describe the business idea (1-2 sentences).

2. State the key objective, as well as secondary objectives (3-5 key goals/outcomes of the business plan).</inlineHelpText>
        <label>Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Impacts__c</fullName>
        <label>Other Impacts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Metric_Related_Information__c</fullName>
        <inlineHelpText>Any other metric related information?</inlineHelpText>
        <label>Other Metric Related Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Tools_Apps_Impacted__c</fullName>
        <inlineHelpText>List other tools impacted by this request</inlineHelpText>
        <label>Other Tools/Apps Impacted</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_IT_Solution_if_Applicable__c</fullName>
        <label>Planned IT Solution(if Applicable)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Tool_App_Impacted__c</fullName>
        <inlineHelpText>Select the primary tool that is impacted by the request. If more than one tool, select the tool that will require the most IT configuration. (If other, list in Other Tools/Apps Impacted)</inlineHelpText>
        <label>Primary Tool/App Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC (Salesforce.com)</fullName>
                </value>
                <value>
                    <fullName>BREES (Business Objects REporting for E-Sales)</fullName>
                </value>
                <value>
                    <fullName>CCW (Cisco Commerce Workspace)</fullName>
                </value>
                <value>
                    <fullName>CES (Customer Engagement Scheduler)</fullName>
                </value>
                <value>
                    <fullName>CR (Customer Registry)</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>GCT (Global Claiming Tool)</fullName>
                </value>
                <value>
                    <fullName>LTLM (Long Term Lead Management)</fullName>
                </value>
                <value>
                    <fullName>OTM (Oracle Territory Manager)</fullName>
                </value>
                <value>
                    <fullName>RDAT</fullName>
                </value>
                <value>
                    <fullName>SMCC (Sales and Marketing Call Center)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>To further clarify requirements ,  attach screenshots, power point slides or excel spreadsheet with descriptive requirements under the Notes and Attachment section</inlineHelpText>
        <label>High Level Requirement</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Projects_Impacted__c</fullName>
        <label>Projects Impacted</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QW_Number__c</fullName>
        <label>QW Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Score__c</fullName>
        <label>ROI Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ROI__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Work_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Request</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Related Work Request</relationshipLabel>
        <relationshipName>Work_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Submitted_Date__c</fullName>
        <label>Request Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Go_Live_Date__c</fullName>
        <label>Requested Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requester_Job_Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <description>Work requester job title</description>
        <label>Requester Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Manager__c</fullName>
        <defaultValue>$User.Reporting_Manager_Name__c</defaultValue>
        <description>Work requester Manager</description>
        <label>Requester Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Org_Segment_Function_Other__c</fullName>
        <description>Requester Market Segment Function</description>
        <label>Requester Org/Segment/Function Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Org_Segment_Function__c</fullName>
        <label>Requester Org/Segment/Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BC COE</fullName>
                    <color>#0B6FCE</color>
                    <label>BC COE</label>
                </value>
                <value>
                    <fullName>Channels</fullName>
                    <color>#F96FB7</color>
                    <label>Channels</label>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                    <color>#E27001</color>
                    <label>Global Enterprise</label>
                </value>
                <value>
                    <fullName>Global SP</fullName>
                    <color>#A845DC</color>
                    <label>Global SP</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <color>#F3D904</color>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>Product Sales</fullName>
                    <color>#A53711</color>
                    <label>Product Sales</label>
                </value>
                <value>
                    <fullName>Services Sales</fullName>
                    <color>#66E9BD</color>
                    <label>Services Sales</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#0B24BE</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>GSESP/GVE/PDI</fullName>
                    <color>#419249</color>
                    <label>GSESP/GVE/PDI</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <color>#EFAE73</color>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>GSSO</fullName>
                    <color>#66FFFF</color>
                    <label>GSSO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Theater__c</fullName>
        <description>Requester Theater</description>
        <label>Requester Geo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                    <color>#0B6FCE</color>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                    <color>#AFCADF</color>
                    <label>APJ</label>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                    <color>#E27001</color>
                    <label>EMEAR</label>
                </value>
                <value>
                    <fullName>GC</fullName>
                    <color>#F96FB7</color>
                    <label>GC</label>
                </value>
                <value>
                    <fullName>GET</fullName>
                    <color>#A845DC</color>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <color>#419249</color>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>GSP</fullName>
                    <color>#A53711</color>
                    <label>GSP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <defaultValue>$User.FirstName &amp; " "  &amp; $User.LastName</defaultValue>
        <label>Requester Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resources_Available__c</fullName>
        <label>Resources Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles_Impacted_List_SalesSegment_Group__c</fullName>
        <inlineHelpText>Select the job roles impacted by business problem</inlineHelpText>
        <label>Roles Impacted(List SalesSegment/Group)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Roles_Impacted__c</fullName>
        <description>The roles impacted by the work request</description>
        <inlineHelpText>Select the job roles impacted by business problem</inlineHelpText>
        <label>Roles Impacted(List Sales Segment/Group)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM (Account Manager)</fullName>
                </value>
                <value>
                    <fullName>PAM (Partner Account Manager)</fullName>
                </value>
                <value>
                    <fullName>PSS (Product Sales Specialists)</fullName>
                </value>
                <value>
                    <fullName>RM (Regional Manager)</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>SAM (Service Account Manager)</fullName>
                </value>
                <value>
                    <fullName>SE (Systems Engineer)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Simplification_of_Sales_Process__c</fullName>
        <description>Improves process efficiency / productivity(i.e. Combines old / retired tools, reduces # of integrations / environments to maintain)</description>
        <label>Simplification of Sales Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A-Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Level_of_Investment_Comments__c</fullName>
        <description>Total Level of Investment(incl. Biz/IT)</description>
        <label>Total Level of Investment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Level_of_Investment_Score__c</fullName>
        <description>Level of investment required Score(Total Project Cost, incl. Biz / IT, licensing, etc.)</description>
        <label>Total Level of Investment Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Total_Level_of_Investment_incl_Biz_IT__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Level_of_Investment_incl_Biz_IT__c</fullName>
        <description>Level of investment required (Total Project Cost, incl. Biz / IT, licensing, etc.)</description>
        <inlineHelpText>Level of investment required (Total Project Cost, incl. Biz / IT, licensing, etc.)</inlineHelpText>
        <label>Total Level of Investment(incl. Biz/IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High ($500K - $1M)</fullName>
                </value>
                <value>
                    <fullName>Medium ($50K-500K)</fullName>
                </value>
                <value>
                    <fullName>Low (&lt; $50K)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>(CASE(  Change_Management_Effort_Score__c  , "10", 10, "5", 5,"0", 0, "N/A", 0, 0)) + 
(CASE( Downstream_Impacts_Score__c,  "10", 10, "5", 5,"0", 0, "N/A", 0, 0)) +
(CASE( Integration_Needed_Score__c ,"10", 10, "0", 0, "N/A", 0, 0)) +
(CASE( Total_Level_of_Investment_Score__c , "10", 10, "5", 5,"0", 0, "N/A", 0, 0)) +
(CASE(  Number_of_Requirement_Risks_Score__c   , "10", 10, "5", 5,"0", 0, "N/A", 0, 0)) +
(CASE( Change_Mgmt_Training_Comms_Required__c ,"10", 10, "5", 5,"0", 0, "N/A", 0, 0)) +
(CASE( Translation_Francisation_Score__c  ,"10", 10, "5", 5,"0", 0, "N/A", 0, 0)) +
(CASE(  User_Impacts_Score__c   ,"10", 10, "5", 5,"0", 0, "N/A", 0, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translation_Francisation_Comments__c</fullName>
        <label>Translation/ Francisation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Translation_Francisation_Score__c</fullName>
        <label>Translation / Francisation Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Translation_Francisation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation_Francisation__c</fullName>
        <label>Translation / Francisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High (&gt;5 Languages)</fullName>
                </value>
                <value>
                    <fullName>Medium (&gt;2 Languages)</fullName>
                </value>
                <value>
                    <fullName>Low (0-2 Languages / Francisation)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation_Francization_Required__c</fullName>
        <description>Translation / Francization Required</description>
        <label>Translation / Francization Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Community_Impact__c</fullName>
        <description>-Who is impacted?  Does this project impact All of Cisco, Multi-Segment or Local, regardless of origination?
-How large is the impacted user group?</description>
        <inlineHelpText>-Who is impacted?  Does this project impact All of Cisco, Multi-Segment or Local, regardless of origination?
-How large is the impacted user group?</inlineHelpText>
        <label>User Community Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Experience_Improvements_Details__c</fullName>
        <inlineHelpText>Is this client experience improved?
If so, please provide details.</inlineHelpText>
        <label>User Experience Improvements Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Impacts_Comments__c</fullName>
        <label>User Impacts Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Impacts_Score__c</fullName>
        <label>User Impacts Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Impacts__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Impacts__c</fullName>
        <label>User Impacts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Request_Aging__c</fullName>
        <description>Number of days since the wr was submitted</description>
        <formula>TODAY () -  Work_Request_Submit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Request Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Request_Complexity_Comments_PMO__c</fullName>
        <label>Work Request Complexity Comments(PMO)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Request_Complexity_Comments__c</fullName>
        <formula>Work_Request_Complexity_Comments_PMO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Request Complexity Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Complexity_PMO__c</fullName>
        <label>Work Request Complexity(PMO)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run the Business</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Request_Complexity__c</fullName>
        <formula>TEXT(Work_Request_Complexity_PMO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Request Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Count__c</fullName>
        <description>Work Request Count</description>
        <formula>1</formula>
        <label>Work Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Request_Name__c</fullName>
        <description>Name of the work request</description>
        <label>Work Request Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Review_Date__c</fullName>
        <description>Work Request month and year reviewed</description>
        <label>Work Request Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Request_Status_Comments_History__c</fullName>
        <description>Used for Work Request Status History</description>
        <label>Work Request Status Comments History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Status_Comments_PMO__c</fullName>
        <description>Comments related to work request status</description>
        <label>Work Request Status Comments(PMO)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Request_Status_Comments__c</fullName>
        <description>Copy of work request status comments visible to requester</description>
        <formula>Work_Request_Status_Comments_PMO__c</formula>
        <label>Work Request Status Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Status_History__c</fullName>
        <description>Work request status history for requester</description>
        <label>Work Request Status History</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Status_PMO__c</fullName>
        <label>Work Request Status(PMO)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analysis In Progress-Resource Assigned</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Requester</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Followup-Needed</fullName>
                </value>
                <value>
                    <fullName>GBC Project</fullName>
                </value>
                <value>
                    <fullName>Merged with another Request</fullName>
                </value>
                <value>
                    <fullName>On Hold-By Requester</fullName>
                </value>
                <value>
                    <fullName>Prioritized-Delivery Scheduled</fullName>
                </value>
                <value>
                    <fullName>Prioritized-Delivery TBD</fullName>
                </value>
                <value>
                    <fullName>Rejected-By Business Capabilities</fullName>
                </value>
                <value>
                    <fullName>Rejected-No Global consensus</fullName>
                </value>
                <value>
                    <fullName>RTB-Assigned</fullName>
                </value>
                <value>
                    <fullName>RTB-Assigned-On Hold</fullName>
                </value>
                <value>
                    <fullName>RTB-Committed</fullName>
                </value>
                <value>
                    <fullName>RTB-Delivered</fullName>
                </value>
                <value>
                    <fullName>RTB-Prioritized</fullName>
                </value>
                <value>
                    <fullName>Transferred to another team</fullName>
                </value>
                <value>
                    <fullName>Transferred to XRM-Active</fullName>
                </value>
                <value>
                    <fullName>Under Complexity Assessment</fullName>
                </value>
                <value>
                    <fullName>Under Global Leads Review</fullName>
                </value>
                <value>
                    <fullName>Under IT Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Request_Status__c</fullName>
        <description>Copy of work request status visible to requester</description>
        <formula>TEXT( Work_Request_Status_PMO__c )</formula>
        <label>Work Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Submit_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Work Request Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Request_Type__c</fullName>
        <label>Work Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run the Business</fullName>
                </value>
                <value>
                    <fullName>Net New Capability</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object is to be used by the CRM Team to log and track requests from stakeholders for historical purposes.</description>
    <label>Work Request</label>
    <nameField>
        <displayFormat>WR-{00000}</displayFormat>
        <label>Work Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Archived</fullName>
        <columns>NAME</columns>
        <columns>Work_Request_Name__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>Estimated_Release_Date__c</columns>
        <columns>Requester__c</columns>
        <columns>Requester_Theater__c</columns>
        <columns>Work_Request_Submit_Date__c</columns>
        <columns>Primary_Tool_App_Impacted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status_PMO__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>Archived</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CX_Work_Requests</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Work_Request_Name__c</columns>
        <columns>Business_Benefits__c</columns>
        <columns>Business_Need_Problem_Statement__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>chsheth,asweatt</value>
        </filters>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>equals</operation>
            <value>Delivered,Cancelled by Requester</value>
        </filters>
        <label>CX Work Requests - CLOSED</label>
        <language>en_US</language>
        <sharedTo>
            <group>CX_Unassigned</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CX_Work_Requests_OPEN</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Work_Request_Name__c</columns>
        <columns>Business_Benefits__c</columns>
        <columns>Business_Need_Problem_Statement__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>chsheth,asweatt</value>
        </filters>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Delivered,Cancelled by Requester</value>
        </filters>
        <label>CX Work Requests - OPEN</label>
        <language>en_US</language>
        <sharedTo>
            <group>CX_Unassigned</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_by_Requester</fullName>
        <columns>NAME</columns>
        <columns>Work_Request_Name__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>Estimated_Release_Date__c</columns>
        <columns>Requester__c</columns>
        <columns>Requester_Theater__c</columns>
        <columns>Work_Request_Submit_Date__c</columns>
        <columns>Primary_Tool_App_Impacted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status_PMO__c</field>
            <operation>equals</operation>
            <value>Cancelled by Requester</value>
        </filters>
        <label>Cancelled by Requester</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delivered</fullName>
        <columns>NAME</columns>
        <columns>Work_Request_Name__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>Estimated_Release_Date__c</columns>
        <columns>Requester__c</columns>
        <columns>Requester_Theater__c</columns>
        <columns>Work_Request_Submit_Date__c</columns>
        <columns>Primary_Tool_App_Impacted__c</columns>
        <columns>Work_Request_Status_Comments_PMO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status_PMO__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>Delivered</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>